--- a/h5/package.json
+++ b/h5/package.json
@@ -14,6 +14,14 @@
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
+  "repository": {
+    "url": "git@github.com:maixiaojie/h5-creator.git"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg"
+    }
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -30,10 +38,13 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
-    "eslint-plugin-prettier": "^3.3.0",
+    "husky": "^4.3.6",
+    "standard-version": "^9.1.0",
+    "validate-commit-msg": "^2.14.0",
     "typescript": "~3.9.3"
   }
 }
