--- a/h5/package.json
+++ b/h5/package.json
@@ -1,11 +1,12 @@
 {
   "name": "h5",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "v": "standard-version"
   },
   "dependencies": {
     "core-js": "^3.6.5",
