--- a/h5/package.json
+++ b/h5/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element3": "^0.0.35",
+    "postcss": "^8.2.3",
+    "prettier": "^2.2.1",
+    "@types/prettier": "^2.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -45,7 +48,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "husky": "^4.3.6",
     "standard-version": "^9.1.0",
-    "validate-commit-msg": "^2.14.0",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "validate-commit-msg": "^2.14.0"
   }
 }
